--- a/src/animation/Animations.css
+++ b/src/animation/Animations.css
@@ -48,3 +48,37 @@
         opacity: 1;
     }
 }
+
+
+.slide-top {
+    -webkit-animation: slide-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+    animation: slide-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+@-webkit-keyframes slide-top {
+    0% {
+        -webkit-transform: translateY(-10px);
+        opacity: 0;
+        transform: translateY(-10px);
+    }
+
+    100% {
+        -webkit-transform: translateY(0px);
+        opacity: 1;
+        transform: translateY(0px);
+    }
+}
+
+@keyframes slide-top {
+    0% {
+        -webkit-transform: translateY(-10px);
+        opacity: 0;
+        transform: translateY(-10px);
+    }
+
+    100% {
+        -webkit-transform: translateX(0px);
+        opacity: 1;
+        transform: translateX(0px);
+    }
+}
